crates/squealy/tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.stderr
error[E0277]: the trait bound `JsonPayload: ColumnNullability` is not satisfied
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:9:14
  |
9 |     payload: C::Type<'scope, JsonPayload>,
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `ColumnNullability` is not implemented for `JsonPayload`
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:4:1
  |
4 | struct JsonPayload;
  | ^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `ColumnNullability`:
            Option<T>
            Vec<u8>
            [u8; N]
            bool
            f32
            f64
            i128
            i16
          and $N others
note: required by a bound in `squealy::ColumnMode::Type`
 --> src/column.rs
  |
  |     type Type<'scope, U>
  |          ---- required by a bound in this associated type
  |     where
  |         U: ColumnNullability;
  |            ^^^^^^^^^^^^^^^^^ required by this bound in `ColumnMode::Type`

error[E0277]: the trait bound `JsonPayload: ColumnNullability` is not satisfied
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:6:10
  |
6 | #[derive(Clone, Debug, PartialEq, Table)]
  |          ^^^^^ unsatisfied trait bound
  |
help: the trait `ColumnNullability` is not implemented for `JsonPayload`
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:4:1
  |
4 | struct JsonPayload;
  | ^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `ColumnNullability`:
            Option<T>
            Vec<u8>
            [u8; N]
            bool
            f32
            f64
            i128
            i16
          and $N others
note: required by a bound in `squealy::ColumnMode::Type`
 --> src/column.rs
  |
  |     type Type<'scope, U>
  |          ---- required by a bound in this associated type
  |     where
  |         U: ColumnNullability;
  |            ^^^^^^^^^^^^^^^^^ required by this bound in `ColumnMode::Type`

error[E0277]: the trait bound `JsonPayload: ColumnNullability` is not satisfied
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:6:17
  |
6 | #[derive(Clone, Debug, PartialEq, Table)]
  |                 ^^^^^ unsatisfied trait bound
  |
help: the trait `ColumnNullability` is not implemented for `JsonPayload`
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:4:1
  |
4 | struct JsonPayload;
  | ^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `ColumnNullability`:
            Option<T>
            Vec<u8>
            [u8; N]
            bool
            f32
            f64
            i128
            i16
          and $N others
note: required by a bound in `squealy::ColumnMode::Type`
 --> src/column.rs
  |
  |     type Type<'scope, U>
  |          ---- required by a bound in this associated type
  |     where
  |         U: ColumnNullability;
  |            ^^^^^^^^^^^^^^^^^ required by this bound in `ColumnMode::Type`

error[E0277]: the trait bound `JsonPayload: ColumnNullability` is not satisfied
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:6:24
  |
6 | #[derive(Clone, Debug, PartialEq, Table)]
  |                        ^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `ColumnNullability` is not implemented for `JsonPayload`
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:4:1
  |
4 | struct JsonPayload;
  | ^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `ColumnNullability`:
            Option<T>
            Vec<u8>
            [u8; N]
            bool
            f32
            f64
            i128
            i16
          and $N others
note: required by a bound in `squealy::ColumnMode::Type`
 --> src/column.rs
  |
  |     type Type<'scope, U>
  |          ---- required by a bound in this associated type
  |     where
  |         U: ColumnNullability;
  |            ^^^^^^^^^^^^^^^^^ required by this bound in `ColumnMode::Type`

error[E0277]: the trait bound `JsonPayload: ColumnNullability` is not satisfied
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:6:35
  |
6 | #[derive(Clone, Debug, PartialEq, Table)]
  |                                   ^^^^^ unsatisfied trait bound
  |
help: the trait `ColumnNullability` is not implemented for `JsonPayload`
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:4:1
  |
4 | struct JsonPayload;
  | ^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `ColumnNullability`:
            Option<T>
            Vec<u8>
            [u8; N]
            bool
            f32
            f64
            i128
            i16
          and $N others
note: required by a bound in `squealy::ColumnMode::Type`
 --> src/column.rs
  |
  |     type Type<'scope, U>
  |          ---- required by a bound in this associated type
  |     where
  |         U: ColumnNullability;
  |            ^^^^^^^^^^^^^^^^^ required by this bound in `ColumnMode::Type`
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `JsonPayload: ColumnNullability` is not satisfied
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:6:35
  |
6 | #[derive(Clone, Debug, PartialEq, Table)]
  |                                   ^^^^^ unsatisfied trait bound
  |
help: the trait `ColumnNullability` is not implemented for `JsonPayload`
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:4:1
  |
4 | struct JsonPayload;
  | ^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `ColumnNullability`:
            Option<T>
            Vec<u8>
            [u8; N]
            bool
            f32
            f64
            i128
            i16
          and $N others
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: this column must be set before `.insert()` (it is not nullable and has no default)
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:6:35
  |
6 | #[derive(Clone, Debug, PartialEq, Table)]
  |                                   ^^^^^ the trait `squealy::InsertReady<squealy::NonNullableColumn>` is not implemented for `__SquealyEventIdWriteInsertState`
  |
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Option<i32>: Decode<Backend>` is not satisfied
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:6:35
  |
6 | #[derive(Clone, Debug, PartialEq, Table)]
  |                                   ^^^^^ the trait `Decode<Backend>` is not implemented for `Option<i32>`
  |
  = help: the following other types implement trait `Decode<B>`:
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
            (T0, T1, T2, T3, T4, T5, T6)
            (T0, T1, T2, T3, T4, T5, T6, T7)
            (T0, T1, T2, T3, T4, T5, T6, T7, T8)
          and $N others
  = note: required for `i32` to implement `DecodeNullable<Backend>`
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Maybe<Event<'static>>: ProjectionShape` is not satisfied
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:6:35
  |
6 | #[derive(Clone, Debug, PartialEq, Table)]
  |                                   ^^^^^ the trait `ProjectionShape` is not implemented for `Maybe<Event<'static>>`
  |
help: the trait `ProjectionShape` is implemented for `Maybe<S>`
 --> src/projection.rs
  |
  | / impl<S> ProjectionShape for Maybe<S>
  | | where
  | |     S: SchemaTable,
  | |     <S as SchemaTable>::WithColumn<'static, ColumnNullableValue>: Send,
  | |     for<'scope> <S as SchemaTable>::NullableExprs<'scope>: Projectable,
  | |_______________________________________________________________________^
note: required by a bound in `squealy::ReturningProjection::Shape`
 --> src/query.rs
  |
  |     type Shape: ProjectionShape;
  |                 ^^^^^^^^^^^^^^^ required by this bound in `ReturningProjection::Shape`
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: expected a `FnOnce(__SquealyEventExprsProjection<'static>)` closure, found `impl ::std::ops::FnOnce(<Event<'static, ::squealy::ColumnExpr> as ::squealy::ProjectionShape>::Exprs<'static>) -> P`
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:6:35
  |
6 | #[derive(Clone, Debug, PartialEq, Table)]
  |                                   ^^^^^ expected an `FnOnce(__SquealyEventExprsProjection<'static>)` closure, found `impl ::std::ops::FnOnce(<Event<'static, ::squealy::ColumnExpr> as ::squealy::ProjectionShape>::Exprs<'static>) -> P`
  |
  = note: expected a closure with signature `fn(__SquealyEventExprsProjection<'static>)`
             found a closure with signature `fn(<Event<'static> as ProjectionShape>::Exprs<'static>)`
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: expected a `FnOnce(__SquealyEventExprsProjection<'static>)` closure, found `impl ::std::ops::FnOnce(<Event<'static, ::squealy::ColumnExpr> as ::squealy::ProjectionShape>::Exprs<'static>) -> __SquealyTarget`
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:6:35
  |
6 | #[derive(Clone, Debug, PartialEq, Table)]
  |                                   ^^^^^ expected an `FnOnce(__SquealyEventExprsProjection<'static>)` closure, found `impl ::std::ops::FnOnce(<Event<'static, ::squealy::ColumnExpr> as ::squealy::ProjectionShape>::Exprs<'static>) -> __SquealyTarget`
  |
  = note: expected a closure with signature `fn(__SquealyEventExprsProjection<'static>)`
             found a closure with signature `fn(<Event<'static> as ProjectionShape>::Exprs<'static>)`
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `HCons<squealy::RequiredCol<EventId, squealy::NonNullableColumn>, HCons<squealy::RequiredCol<EventPayload, _>, HNil>>: squealy::RequiredCovered<<<__SquealyCols as squealy::ReturningProjection<'static>>::Shape as IntoKindList>::Kinds, __SquealyCoverage>` is not satisfied
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:6:35
  |
6 | #[derive(Clone, Debug, PartialEq, Table)]
  |                                   ^^^^^ unsatisfied trait bound
  |
  = help: the trait `squealy::RequiredCovered<<<__SquealyCols as squealy::ReturningProjection<'static>>::Shape as IntoKindList>::Kinds, __SquealyCoverage>` is not implemented for `HCons<squealy::RequiredCol<EventId, squealy::NonNullableColumn>, HCons<squealy::RequiredCol<EventPayload, _>, HNil>>`
help: the following other types implement trait `squealy::RequiredCovered<Set, Indices>`
 --> src/list.rs
  |
  | / impl<Set, K, Tail, Index, RestIndices> RequiredCovered<Set, HCons<Index, RestIndices>>
  | |     for HCons<RequiredCol<K, crate::NonNullableColumn>, Tail>
  | | where
  | |     Set: CoversColumn<K, Index>,
  | |     Tail: RequiredCovered<Set, RestIndices>,
  | |____________________________________________^ `HCons<squealy::RequiredCol<K, squealy::NonNullableColumn>, Tail>` implements `squealy::RequiredCovered<Set, HCons<Index, RestIndices>>`
...
  | / impl<Set, K, Tail, RestIndices> RequiredCovered<Set, HCons<Omittable, RestIndices>>
  | |     for HCons<RequiredCol<K, crate::NullableColumn>, Tail>
  | | where
  | |     Tail: RequiredCovered<Set, RestIndices>,
  | |____________________________________________^ `HCons<squealy::RequiredCol<K, squealy::NullableColumn>, Tail>` implements `squealy::RequiredCovered<Set, HCons<squealy::list::Omittable, RestIndices>>`
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: expected a `FnOnce(__SquealyEventExprsProjection<'static>)` closure, found `impl ::std::ops::FnOnce(<Event<'static, ::squealy::ColumnExpr> as ::squealy::ProjectionShape>::Exprs<'static>) -> __SquealyCols`
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:6:35
  |
6 | #[derive(Clone, Debug, PartialEq, Table)]
  |                                   ^^^^^ expected an `FnOnce(__SquealyEventExprsProjection<'static>)` closure, found `impl ::std::ops::FnOnce(<Event<'static, ::squealy::ColumnExpr> as ::squealy::ProjectionShape>::Exprs<'static>) -> __SquealyCols`
  |
  = note: expected a closure with signature `fn(__SquealyEventExprsProjection<'static>)`
             found a closure with signature `fn(<Event<'static> as ProjectionShape>::Exprs<'static>)`
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: this column must be set before `.insert()` (it is not nullable and has no default)
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:6:35
  |
6 | #[derive(Clone, Debug, PartialEq, Table)]
  |                                   ^^^^^ the trait `squealy::InsertReady<squealy::NonNullableColumn>` is not implemented for `__SquealyEventIdWriteInsertState`
  |
note: required by a bound in `__SquealyEventWriteBuilder<'conn, Conn, InsertColumns, UpdateColumns, Filters, FilterState, __SquealyEventIdWriteInsertState, __SquealyEventPayloadWriteInsertState, __SquealyEventIdWriteUpdateState, __SquealyEventPayloadWriteUpdateState>`
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:6:35
  |
6 | #[derive(Clone, Debug, PartialEq, Table)]
  |                                   ^^^^^ required by this bound in `__SquealyEventWriteBuilder<'conn, Conn, InsertColumns, UpdateColumns, Filters, FilterState, __SquealyEventIdWriteInsertState, __SquealyEventPayloadWriteInsertState, __SquealyEventIdWriteUpdateState, __SquealyEventPayloadWriteUpdateState>`
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `JsonPayload: ColumnNullability` is not satisfied
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:9:5
  |
6 | #[derive(Clone, Debug, PartialEq, Table)]
  |          ----- in this derive macro expansion
...
9 |     payload: C::Type<'scope, JsonPayload>,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `ColumnNullability` is not implemented for `JsonPayload`
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:4:1
  |
4 | struct JsonPayload;
  | ^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `ColumnNullability`:
            Option<T>
            Vec<u8>
            [u8; N]
            bool
            f32
            f64
            i128
            i16
          and $N others
note: required by a bound in `squealy::ColumnMode::Type`
 --> src/column.rs
  |
  |     type Type<'scope, U>
  |          ---- required by a bound in this associated type
  |     where
  |         U: ColumnNullability;
  |            ^^^^^^^^^^^^^^^^^ required by this bound in `ColumnMode::Type`

error[E0277]: the trait bound `JsonPayload: ColumnNullability` is not satisfied
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:9:5
  |
6 | #[derive(Clone, Debug, PartialEq, Table)]
  |                        --------- in this derive macro expansion
...
9 |     payload: C::Type<'scope, JsonPayload>,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `ColumnNullability` is not implemented for `JsonPayload`
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:4:1
  |
4 | struct JsonPayload;
  | ^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `ColumnNullability`:
            Option<T>
            Vec<u8>
            [u8; N]
            bool
            f32
            f64
            i128
            i16
          and $N others
note: required by a bound in `squealy::ColumnMode::Type`
 --> src/column.rs
  |
  |     type Type<'scope, U>
  |          ---- required by a bound in this associated type
  |     where
  |         U: ColumnNullability;
  |            ^^^^^^^^^^^^^^^^^ required by this bound in `ColumnMode::Type`

error[E0277]: the trait bound `JsonPayload: ColumnNullability` is not satisfied
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:9:30
  |
9 |     payload: C::Type<'scope, JsonPayload>,
  |                              ^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `ColumnNullability` is not implemented for `JsonPayload`
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:4:1
  |
4 | struct JsonPayload;
  | ^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `ColumnNullability`:
            Option<T>
            Vec<u8>
            [u8; N]
            bool
            f32
            f64
            i128
            i16
          and $N others

error[E0277]: the trait bound `JsonPayload: HasColumnType` is not satisfied
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:9:30
  |
9 |     payload: C::Type<'scope, JsonPayload>,
  |                              ^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `HasColumnType` is not implemented for `JsonPayload`
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:4:1
  |
4 | struct JsonPayload;
  | ^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `HasColumnType`:
            Option<T>
            Vec<u8>
            [u8; N]
            bool
            f32
            f64
            i128
            i16
          and $N others

error[E0277]: expected a `FnOnce(&__SquealyEventExprsProjection<'static>)` closure, found `impl ::std::ops::FnOnce(&<Event<'static, ::squealy::ColumnExpr> as ::squealy::ProjectionShape>::Exprs<'static>) -> ::squealy::Predicate<'static, P, PredicateAst>`
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:6:35
  |
6 | #[derive(Clone, Debug, PartialEq, Table)]
  |                                   ^^^^^ expected an `FnOnce(&__SquealyEventExprsProjection<'static>)` closure, found `impl ::std::ops::FnOnce(&<Event<'static, ::squealy::ColumnExpr> as ::squealy::ProjectionShape>::Exprs<'static>) -> ::squealy::Predicate<'static, P, PredicateAst>`
  |
  = note: expected a closure with signature `fn(&__SquealyEventExprsProjection<'static>)`
             found a closure with signature `fn(&<Event<'static> as ProjectionShape>::Exprs<'static>)`
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:6:35
  |
6 | #[derive(Clone, Debug, PartialEq, Table)]
  |                                   ^^^^^
  |                                   |
  |                                   expected `&<... as ProjectionShape>::Exprs<'_>`, found `&__SquealyEventExprsProjection<'_>`
  |                                   arguments to this function are incorrect
  |
  = note: expected reference `&<Event<'static> as ProjectionShape>::Exprs<'static>`
             found reference `&__SquealyEventExprsProjection<'_>`
help: a method is available that returns `<Event<'static> as ProjectionShape>::Exprs<'static>`
 --> src/projection.rs
  |
  |     fn exprs<'scope>(alias: SourceAlias) -> Self::Exprs<'scope>;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ consider calling `exprs`
note: type parameter defined here
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:6:35
  |
6 | #[derive(Clone, Debug, PartialEq, Table)]
  |                                   ^^^^^
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:6:35
  |
6 | #[derive(Clone, Debug, PartialEq, Table)]
  |                                   ^^^^^
  |                                   |
  |                                   expected associated type, found `__SquealyEventExprsProjection<'_>`
  |                                   arguments to this function are incorrect
  |
  = note: expected associated type `<Event<'static> as ProjectionShape>::Exprs<'static>`
                      found struct `__SquealyEventExprsProjection<'_>`
help: a method is available that returns `<Event<'static> as ProjectionShape>::Exprs<'static>`
 --> src/projection.rs
  |
  |     fn exprs<'scope>(alias: SourceAlias) -> Self::Exprs<'scope>;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ consider calling `exprs`
note: type parameter defined here
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:6:35
  |
6 | #[derive(Clone, Debug, PartialEq, Table)]
  |                                   ^^^^^
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `JsonPayload: ColumnNullability` is not satisfied
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:6:39
  |
6 | #[derive(Clone, Debug, PartialEq, Table)]
  |                                       ^ unsatisfied trait bound
  |
help: the trait `ColumnNullability` is not implemented for `JsonPayload`
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:4:1
  |
4 | struct JsonPayload;
  | ^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `ColumnNullability`:
            Option<T>
            Vec<u8>
            [u8; N]
            bool
            f32
            f64
            i128
            i16
          and $N others
note: required by a bound in `squealy::ColumnMode::Type`
 --> src/column.rs
  |
  |     type Type<'scope, U>
  |          ---- required by a bound in this associated type
  |     where
  |         U: ColumnNullability;
  |            ^^^^^^^^^^^^^^^^^ required by this bound in `ColumnMode::Type`
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `?` couldn't convert the error: `JsonPayload: ColumnNullability` is not satisfied
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:6:39
  |
6 | #[derive(Clone, Debug, PartialEq, Table)]
  |                                       ^ unsatisfied trait bound
  |
help: the trait `ColumnNullability` is not implemented for `JsonPayload`
 --> tests/compile_fail/feature_gated/unmapped_column_type_requires_db_type.rs:4:1
  |
4 | struct JsonPayload;
  | ^^^^^^^^^^^^^^^^^^
  = note: the question mark operation (`?`) implicitly performs a conversion on the error value using the `From` trait
  = help: the following other types implement trait `ColumnNullability`:
            Option<T>
            Vec<u8>
            [u8; N]
            bool
            f32
            f64
            i128
            i16
          and $N others
note: required by a bound in `squealy::ColumnMode::Type`
 --> src/column.rs
  |
  |     type Type<'scope, U>
  |          ---- required by a bound in this associated type
  |     where
  |         U: ColumnNullability;
  |            ^^^^^^^^^^^^^^^^^ required by this bound in `ColumnMode::Type`
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)
